syntax = "proto3";

package chat;

service Chat {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc Join(stream Message) returns (stream Message) {}
}

message LoginRequest { string username = 1; }

message LoginResponse {}

message LogoutRequest { string username = 1; }

message LogoutResponse {}

message Message {
  string sender = 1;
  string value = 2;
}